[package]
name = "gtiot"
description = "GTIOT: High-Fidelity Edge Fusion and Action-Collapse Framework [RFC-005]"
# Inheriting core protocol DNA from the imperial root workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/Aicent-Stack/gtiot"
homepage = "http://gtiot.com"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-005-GTIOT-BODY.md"
rust-version.workspace = true

# Keywords and categories for industrial robotics and aerospace authority
keywords = ["robotics", "embodied-ai", "rfc-005", "action-collapse", "proprioception", "128-bit-atomic"]
categories = ["embedded", "hardware-support", "no-std", "science", "aerospace"]

[dependencies]
# --- Core Organism Linking (Unidirectional Dependency Flow) ---
# The Body layer consumes pulses from Nerves (RTTP) and requires 
# security clearance from Immunity (RPKI) and Blood (ZCMK).
# 🛡️ THE ARCHITECTURAL LOCK: Decoupled from Brain (aicent) to break cyclic deadlocks.
rttp = { workspace = true, features = ["std"] }
rpki = { workspace = true, features = ["std"] }
zcmk = { workspace = true, features = ["std"] }

# --- Hard Real-Time & Physical Execution (1.2 kHz Standard) ---
# Utilizing the Embassy ecosystem for deterministic task scheduling without OS jitter.
embassy-executor = { workspace = true }
embassy-time     = { workspace = true }

# --- Kinetic Primitives & Mathematics (The Digital Spine) ---
# [PHYSICS] Linear algebra for 12-DOF kinematics and 128-bit torque manifolds.
nalgebra = { workspace = true }
# [PERF] Zero-allocation storage for high-frequency motor trajectories.
smallvec = { workspace = true, features = ["serde"] }

# --- Logic, State & Telemetry ---
serde     = { workspace = true, features = ["derive"] }
anyhow    = { workspace = true }
tracing   = { workspace = true } # High-fidelity proprioceptive telemetry
once_cell = { workspace = true } # Safe static initialization of 128-bit manifolds
tokio     = { workspace = true, features = ["sync", "rt"] } # Simulation bridge for CI/CD

[features]
# Standard implementation: Optimized for high-end industrial edge clusters.
default = ["std"]

# [Standard v1.0] Standard library support for the embodied execution layer.
# Explicitly re-exporting 'std' for internal Aicent Stack dependencies to ensure homeostasis.
std = [
    "serde/std", 
    "anyhow/std", 
    "rttp/std", 
    "rpki/std", 
    "zcmk/std", 
    "tokio/rt", 
    "tokio/sync"
]

# [RFC-005] Bare-metal support for industrial robotics (MCUs/NPUs).
# Disables standard library and utilizes hardware-specific floating point logic.
no_std = ["nalgebra/libm"]

[dev-dependencies]
# Performance benchmarking for the 200µs Action-Collapse finality target.
criterion = { workspace = true, features = ["async_tokio"] }
