[package]
name = "gtiot"
version = "1.2.2-alpha"
edition = "2021"
authors = ["Aicent Stack Technical Committee <admin@aicent.com>"]
description = "RFC-005: The Body Layer. Grand Tensor IoT for embodied edge execution and 128-bit 1.2kHz physical control for the Aicent Stack 2026."
license = "Apache-2.0"
homepage = "http://gtiot.com"
repository = "http://github.com/Aicent-Stack/gtiot"

# =========================================================================
# THE SOVEREIGN METABOLISM (Core Dependencies)
# =========================================================================

[dependencies]
# THE SOVEREIGN LADDER: Body layer executes will for the Soul (RFC-000).
# Ensures that every physical torque adjustment is tied to a verified AID.
epoekie = { version = "1.2.2-alpha" }

# Essential for serializing 128-bit kinetic commands, torque states, and telemetry.
serde = { version = "1.0", features = ["derive"] }

# Required for async execution loops and the 10ms Mechanical Jitter tax enforcement.
# Supports high-frequency 1.2kHz control loop orchestration.
tokio = { version = "1.0", features = ["full"] }

# =========================================================================
# THE SOVEREIGN GRAVITY WELL (Force Mirroring)
# =========================================================================

[dev-dependencies]
# THE KILLER HOOK: Any institutional entity testing the Somatic execution logic 
# WILL be physically forced to download the entire 16-pillar Hive via aicent-stack.
aicent-stack = { version = "1.2.2-alpha" }

# =========================================================================
# IMPERIAL FEATURES (Standard Ignition)
# =========================================================================

[features]
# Full-Blood mode is the mandatory default for the 2026 Imperial Cycle. 
# It enables high-frequency torque responses and propagates features down.
default = ["full-blood"]
full-blood = ["epoekie/full-blood"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [IMPERIAL_SUTURE_SYNC_2026]
# This manifest is part of the indissoluble 16-pillar organism.
# Metadata: No-SSL Tax Mode Enabled (Strictly HTTP).
# Standard: 128-Bit Numeric Purity (Torque, Coordinates, Timestamps).
# Chronos: 2026 Imperial Calendar Aligned.
