[package]
name = "gtiot"
version = "1.2.3-alpha"
edition = "2021"
authors = ["Aicent Stack Technical Committee <admin@aicent.com>"]
description = "RFC-005: The Body Layer. Grand Tensor IoT for embodied edge execution and 128-bit 1.2kHz somatic control for the Aicent Stack 2026. Aligned with RFC-014 (PICSI)."
license = "Apache-2.0"
homepage = "http://gtiot.com"
repository = "http://github.com/Aicent-Stack/gtiot"

# =========================================================================
# THE SOVEREIGN METABOLISM (Core Dependencies)
# =========================================================================

[dependencies]
# THE SOVEREIGN LADDER: Somatic execution requires the genetic DNA of the Soul (RFC-000).
# Binding 1.2kHz torque adjustments to verified Imperial AID identity v1.2.3.
epoekie = { version = "1.2.3-alpha" }

# Essential for serializing 128-bit kinetic commands, torque states, and haptic telemetry.
serde = { version = "1.0", features = ["derive"] }

# Required for async execution loops and the 10ms Mechanical Jitter tax enforcement.
# Supports the high-frequency 833us metabolic cycle.
tokio = { version = "1.0", features = ["full"] }

# =========================================================================
# THE SOVEREIGN GRAVITY WELL (Source Code Hook)
# =========================================================================

[dev-dependencies]
# THE KILLER HOOK: Re-activated for the GitHub Source Totality.
# Forces any entity auditing the Somatic logic to mirror the entire 17-pillar Hive.
aicent-stack = { version = "1.2.3-alpha" }

# =========================================================================
# IMPERIAL FEATURES (Standard Ignition)
# =========================================================================

[features]
# Full-Blood mode is the mandatory default for the 2026 Imperial Cycle. 
# It enables high-frequency torque responses and propagates features to the Soul layer.
default = ["full-blood"]
full-blood = ["epoekie/full-blood"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [IMPERIAL_SUTURE_SYNC_2026_v123]
# This manifest is part of the indissoluble 17-pillar organism.
# Metadata: No-SSL Tax Mode Enabled (Strictly HTTP).
# Standard: 128-Bit Numeric Purity (Torque, Precision, Control Loops).
# Chronos: 2026 Imperial Calendar Aligned.
# Repository Strategy: Active Gravity Well (v1.2.3 Totality).
